# paper-harness

./: .gitignore  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/minimal_pytorch/: paper.txt
examples/minimal_pytorch/repo/: README.md  evaluate.py  train.py
examples/minimal_pytorch/repo/configs/: cifar10.yaml
skills/paperharness/: SKILL.md
src/paperharness/: __init__.py  cli.py
src/paperharness/generate/: __init__.py  cli_wrapper.py  kit.py  plan.py  references.py  report.py  skill.py
src/paperharness/ir/: __init__.py  io.py  schema.py  validate.py
src/paperharness/matcher/: __init__.py  match.py  missing.py  score.py
src/paperharness/paper/: __init__.py  extract_experiments.py  extract_results.py  grobid_backend.py  llm_extract.py  marker_backend.py  parse.py  summarize.py
src/paperharness/repo/: __init__.py  clone.py  detect_entrypoints.py  detect_environment.py  scan.py  scan_configs.py  scan_readme.py
src/paperharness/templates/: SKILL.md.j2  experiment_map.md.j2  experiment_plan.md.j2  missing_info.md.j2  paper_summary.md.j2  repo_summary.md.j2  report_template.md.j2  repro.py.j2
src/paperharness/utils/: commands.py  logging.py
tests/: test_clone.py  test_extraction_flow.py  test_generation.py  test_ir_validation.py  test_matcher_quality.py  test_paper_commands.py  test_paper_parse.py  test_repo_scan.py  test_repro_safety.py  test_summarize_and_extract.py
